v2.1.0

- Adds an extension method for registering and configuring file services. 

v2.0.0

- Upgrade to .NET 8.0.

v1.0.0

- Initial release.