@@ -79,11 +79,14 @@ public class FileSystem : IFileService
         [EnumeratorCancellation] CancellationToken token = default)
 #pragma warning restore CS1998 // Async method lacks 'await' operators and will run synchronously
     {
-        foreach (var fileInfo in new DirectoryInfo(Path.Combine(_basePath, path)).EnumerateFiles())
+        var fullBasePath = new DirectoryInfo(_basePath).FullName;
+
+        foreach (var fileInfo in new DirectoryInfo(Path.Combine(_basePath, path))
+                     .EnumerateFiles("*", new EnumerationOptions { RecurseSubdirectories = true }))
         {
             yield return new IFileService.FileDescription
             {
-                FullName = Path.Combine(path, fileInfo.Name),
+                FullName = fileInfo.FullName.Replace($"{fullBasePath}{Path.DirectorySeparatorChar}", string.Empty),
                 ContentLength = fileInfo.Length,
                 CreatedOn = fileInfo.CreationTimeUtc,
             };
